--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -22,5 +22,6 @@
 		<script type="text/javascript" src="../../static/js/bootstrap-datetimepicker.js" th:src="@{/js/bootstrap-datetimepicker.js}" charset="UTF-8"></script>
 		<script type="text/javascript" src="../../static/js/bootstrap-datetimepicker.de.js" th:src="@{/js/bootstrap-datetimepicker.de.js}" charset="UTF-8"></script>
 		<script type="text/javascript" src="../../static/js/datepicker-selection.js" th:src="@{/js/datepicker-selection.js}" charset="UTF-8"></script>
+		<script type="text/javascript" src="../../static/js/custom.js" th:src="@{/js/custom.js}" charset="UTF-8"></script>
 	</body>
 </html>
