--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -40,7 +40,7 @@
 							<thead>
 								<tr>
 									<th colspan="2">
-										<span>Gewinner nach 11 Meter schießen</span>
+										<span th:text="penalty.box.heading"></span>
 									</th>
 								</tr>
 							</thead>
