--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -42,7 +42,7 @@
 							<thead>
 								<tr>
 									<th colspan="2">
-										<span>Gewinner nach 11 Meter schießen</span>
+										<span th:text="penalty.box.heading"></span>
 									</th>
 								</tr>
 							</thead>
