--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -29,18 +29,18 @@
 							</thead>
 							<tbody>
 								<tr class="info">
-									<td><input type="text" th:field="*{teamResultOne}" class="form-control form-size-small" /></td>
-									<td><input type="text" th:field="*{teamResultTwo}" class="form-control form-size-small" /></td>
+									<td><input type="text" th:field="*{teamResultOne}" class="form-control form-size-small" onchange="checkPenalty()"/></td>
+									<td><input type="text" th:field="*{teamResultTwo}" class="form-control form-size-small" onchange="checkPenalty()"/></td>
 								</tr>
 							</tbody>
 						</table>												
 					</div>
-					<div class="form-group">
+					<div id="penaltyBox" class="form-group" th:if="${!matchResultCommand.isGroupMatch()}">
 						<table class="table center">
 							<thead>
 								<tr>
 									<th colspan="2">
-										<span th:text="penalty.box.heading"></span>
+										<span th:text="#{penalty.box.heading}"></span>
 									</th>
 								</tr>
 							</thead>
