added prices page

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -68,6 +68,7 @@
 			        	</a>
 			        	<ul class="dropdown-menu">
 				        	<li th:class="${pageState_info_rules}"><a href="#rules" th:href="@{/info/rules}" th:text="#{rules.title}"></a></li>
+				        	<li th:class="${pageState_info_prices}"><a href="#prices" th:href="@{/info/prices}" th:text="#{prices.title}"></a></li>
 			        	</ul>
 			        </li>
 				</ul>
