--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -43,17 +43,17 @@
 					  			</div>					
 					  			<div class="col-xs-4 goal-badges">				
 					  				<div class="short-div goal_padding_bigger">
-					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.userBetGoalsTeamOneCssClasses}" 
+					  					<span class="label label-as-badge big-badge" th:classappend="${T(de.fred4jupiter.fredbet.web.CssHelper).getUserBetGoalsTeamOneCssClasses(matchCommand)}" 
 					  					      th:text="${matchCommand.userBetGoalsTeamOne != null ? matchCommand.userBetGoalsTeamOne : '?'}"></span>
 								  		<span> : </span>
-							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.userBetGoalsTeamTwoCssClasses}" 
+							  			<span class="label label-as-badge big-badge" th:classappend="${T(de.fred4jupiter.fredbet.web.CssHelper).getUserBetGoalsTeamTwoCssClasses(matchCommand)}" 
 							  			      th:text="${matchCommand.userBetGoalsTeamTwo != null ? matchCommand.userBetGoalsTeamTwo : '?'}"></span>
 					  				</div>	  				
 					  				<div class="short-div goal_padding">
-					  					<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultOneCssClasses}" 
+					  					<span class="label label-as-badge big-badge" th:classappend="${T(de.fred4jupiter.fredbet.web.CssHelper).getTeamResultOneCssClasses(matchCommand)}" 
 					  					      th:text="${matchCommand.teamResultOne != null ? matchCommand.teamResultOne : '?'}"></span>
 								  		<span> : </span>
-							  			<span class="label label-as-badge big-badge" th:classappend="${matchCommand.teamResultTwoCssClasses}" 
+							  			<span class="label label-as-badge big-badge" th:classappend="${T(de.fred4jupiter.fredbet.web.CssHelper).getTeamResultTwoCssClasses(matchCommand)}" 
 							  			      th:text="${matchCommand.teamResultTwo != null ? matchCommand.teamResultTwo : '?'}"></span>
 					  				</div>
 					  			</div>  			
