--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -73,12 +73,12 @@
 			        </li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li th:if="${@securityBean.isUserLoggedIn()}" class="dropdown" th:classappend="${pageState_userprofile}">
+					<li th:if="${@securityBean.isUserLoggedIn()}" class="dropdown" th:classappend="${pageState_profile}">
 						<a href="#" th:inline="text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <span class="glyphicon glyphicon-user"></span> <span sec:authentication="name"></span><span class="caret"></span>
                         </a>
 						<ul class="dropdown-menu">
-							<li th:class="${pageState_userprofile_changePassword}"><a href="#changePassword" th:href="@{/userprofile/changePassword}" th:text="#{navigation.changePassword}"></a></li>
+							<li th:class="${pageState_profile_changePassword}"><a href="#changePassword" th:href="@{/profile/changePassword}" th:text="#{navigation.changePassword}"></a></li>
 						</ul>						
 					</li>
 					<li th:if="${@securityBean.isUserLoggedIn()}">
