--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap-theme.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/bootstrap-datetimepicker.min.css}" media="screen"/>	
 		<link rel="stylesheet" th:href="@{/css/custom.css}" />
+		<script src="//cdn.ckeditor.com/4.4.7/standard/ckeditor.js"></script>
 	</head>
 	<body>
 		<nav th:include="_navigation :: menu" class="navbar navbar-inverse navbar-fixed-top"></nav>
