--- a/src/main/resources/templates/info/prices.html
+++ b/src/main/resources/templates/info/prices.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<h1>Preise</h1>		
+		<h1 th:text="#{prices.title}"></h1>		
 		<div class="row">			
 			<div class="col-xs-12 col-sm-12 col-md-12">
 				<div th:remove="tag" th:utext="${textContent}"></div>
