--- a/src/main/resources/templates/info/prices.html
+++ b/src/main/resources/templates/info/prices.html
@@ -12,7 +12,7 @@
 				<div th:remove="tag" th:utext="${textContent}"></div>
 			</div>
 		</div>
-		<a sec:authorize="hasAuthority('PERM_EDIT_INFOS')" href="#" th:href="@{/info/editinfo?name=prices}" class="btn btn-primary" role="button" th:text="#{info.prices.edit.button}"></a>
+		<a sec:authorize="hasAuthority('PERM_EDIT_INFOS')" href="#" th:href="@{/info/editinfo/prices}" class="btn btn-primary" role="button" th:text="#{info.prices.edit.button}"></a>
 	</div>
 </body>
 </html>
