--- a/src/main/resources/templates/admin/active_users.html
+++ b/src/main/resources/templates/admin/active_users.html
@@ -10,13 +10,8 @@
 		<div class="col-xs-12 col-sm-6 col-md-4">
 			<div class="row" th:each="userName : ${userList}">
 				<div class="panel panel-default">					
-					<div class="panel-body user-panel-body">
-						<div class="row">
-							<div class="col-xs-7 user-label">
-								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-								<span th:text="${userName}"></span>							  		
-				  			</div>				  						  				
-      					</div>
+					<div class="panel-heading">
+						<span th:text="${userName}"></span>	
 				   </div>					   
 				</div>			
 			</div>		
