disabled gelf appender; show user count

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -7,7 +7,7 @@
 <body>
 	<div layout:fragment="content">
 		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}"></div>
-		<h1 th:text="#{user.list.title}"></h1>
+		<h1 th:text="#{user.list.title} + ' (' + ${allUsers.size()} + ')'"></h1>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-4" th:each="user : ${allUsers}">
 				<div class="panel panel-default">					
