--- a/src/main/resources/templates/info/rules.html
+++ b/src/main/resources/templates/info/rules.html
@@ -5,7 +5,7 @@
 	<title th:text="#{rules.title}"></title>
 </head>
 <body>
-	<div layout:fragment="content">
+	<div layout:fragment="content" class="imgsizing">
 		<h1 th:text="#{rules.title}"></h1>		
 		<div class="row">			
 			<div class="col-xs-12 col-sm-12 col-md-12">				
