center points and goals

--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -41,7 +41,7 @@
 										<span class="fa fa-trophy fa-2x" th:title="#{matches.list.result}"></span>
 									</div>							  									  		
 					  			</div>					
-					  			<div class="col-xs-4 goal-badges">				
+					  			<div class="col-xs-4 goal-badges center">				
 					  				<div class="short-div goal_padding_bigger">
 					  					<span class="label label-as-badge big-badge" th:classappend="${T(de.fred4jupiter.fredbet.web.CssHelper).getUserBetGoalsTeamOneCssClasses(matchCommand)}" 
 					  					      th:text="${matchCommand.userBetGoalsTeamOne != null ? matchCommand.userBetGoalsTeamOne : '?'}"></span>
