--- a/src/main/resources/templates/bet/extra_others.html
+++ b/src/main/resources/templates/bet/extra_others.html
@@ -31,7 +31,9 @@
 				   	   </div>
 				   </div>
 				</div>
-			</div>
+			</div>			
+		</div>
+		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="form-group">
 					<a href="#" th:href="@{/bet/extra_bets}" class="btn btn-default" role="button" th:text="#{button.back}"></a>	
