--- a/src/main/resources/templates/bet/extra_others.html
+++ b/src/main/resources/templates/bet/extra_others.html
@@ -18,8 +18,8 @@
 					   <div class="table-responsive">
 					   		<table class="table table-condensed">
 					   			<tr class="active">
-					   				<th th:text="#{extra_bets.finalWinner}"></th>
-					   				<th th:text="#{extra_bets.semiFinalWinner}"></th>
+					   				<th th:title="#{extra_bets.finalWinner}">1. <span class="fa fa-trophy"></span></th>					   				
+					   				<th th:title="#{extra_bets.semiFinalWinner}">2. <span class="fa fa-trophy"></span></th>
 					   				<th th:text="#{bet.list.points}"></th>
 					   			</tr>
 					   			<tr>
