added html anchors

--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -48,7 +48,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-4">
-				<a th:href="@{/matches}" class="btn btn-default" role="button" th:text="#{button.back}"></a>
+				<a href="#" th:href="@{${'/matches#' + allBetsCommand.matchId}}" class="btn btn-default" role="button" th:text="#{button.back}"></a>
 			</div>
 		</div>
 	</div>
