--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -54,7 +54,7 @@
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-						<a href="#" th:href="@{/matches}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
+						<a href="#" th:href="@{${'/matches#' + matchResultCommand.matchId}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
 					</div>
 				</div>
 			</div>
