--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -33,7 +33,9 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label th:text="#{matches.form.teamNames} + ':'"></label><br/>
+						<label th:text="#{matches.form.teamNames} + ':'"></label>
+						<a href="#" onclick="clearTeamNameFields()"><i class="fa fa-times-circle-o" aria-hidden="true"></i></a>			
+						<br/>
 						<div class="row">							
 							<div class="col-xs-6">
 								<input type="text" th:field="*{nameTeamOne}" class="form-control" />
